force-app/main/default/objects/DC_Homerun__c/DC_Homerun__c.object-meta.xml
<CustomObject>
    <label>Home Run</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Home Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>