force-app/main/default/objects/DC_Homerun__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Asset allocated to this Homerun.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Homeruns</relationshipName>
    <type>Lookup</type>
</CustomField>