force-app/main/default/objects/DC_Homerun__c/fields/Available_Fiber_Pairs__c.field-meta.xml
<CustomField>
    <fullName>Available_Fiber_Pairs__c</fullName>
    <formula>Fiber_Pairs_Committed__c - Fiber_Pairs_Connected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Fiber Pairs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>