force-app/main/default/objects/DC_Homerun__c/fields/Connected_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Connected_Service_Order__c</fullName>
    <description>The Service Order that resulted in this Fiber Pair being installed. This is provided upon the initial record creation of all installed fibers in the Homerun. Hyperlink to related Service Order from the Asset record that caused this creation.</description>
    <label>Connected Service Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>