force-app/main/default/objects/DC_Homerun__c/fields/Fiber_Pairs_Committed__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Pairs_Committed__c</fullName>
    <description>The total number of fiber pairs allowed for use in current Service Order.</description>
    <label>Fiber Pairs Committed</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>