force-app/main/default/objects/DC_Homerun__c/fields/Fiber_Pairs_Connected__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Pairs_Connected__c</fullName>
    <description>The total number of fiber pairs contained within this homerun bundle.</description>
    <label>Fiber Pairs Connected</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>